# mongo-c-driver

./: Makefile.am  configure.ac
pkgconfig/: mongo-c-driver-uninstalled.pc.in  mongo-c-driver.pc.in
